CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2018
Various contributors (see below, and AUTHORS.txt)
http://www.tuxpaint.org/

$Id$

2018.Oct.7 (0.9.23c)
  * Bug Fixes
    ---------
    * Correct issue that prevented Tux Paint from lauching on Mac OS X 10.7.
      (See https://sourceforge.net/p/tuxpaint/tuxpaint/ci/d2ef2e17d1962111d0f6f91394dce81e8706d48b/
      and https://stackoverflow.com/questions/20206985/xcode-linking-against-applicationservices-framework-with-sdk-10-9-causes-10-7)
      Mark K. Kim <mkkim214@gmail.com>

    * Reduce launch time by calling progress bar less frequently
      while loading stamps.
      Mark K. Kim <mkkim214@gmail.com>

    * Ability to bring up the print dialog from the macOS build was
      removed in Tux Paint 0.9.23 to support the new build mechanism.
      It has been re-added.  To access it, option-click the print icon,
      or configure Tux Paint to always bring up the dialog upon print.
      Mark K. Kim <mkkim214@gmail.com>

  * Documentation updates
    ---------------------
    * Mended link to MinGW/MSYS instructions at John Popplewell's website.
      (h/t "sechidis")

  * Misc
    ----
    * Verbose debugging, and "DEBUG_PRINTF()" macro now available;
      see debugging options in INSTALL.txt.
      Mark K. Kim <mkkim214@gmail.com>

  * Notes:
    ------
    * 0.9.23a & 0.9.23b were test versions for macOS that Mark produced
      and sent to individual users for testing.

2018.August.30 (0.9.23)
  * New tools
    ---------
    * Color selector
      Pere Pujal i Carabantes

  * New shapes
    ----------
    * Stars
      Pere Pujal i Carabantes

  * Documentation updates
    ---------------------
    * Made stamp controls (size, flip, mirror) section clearer.
      Fixes https://sourceforge.net/p/tuxpaint/bugs/182/

    * Cleaned up and reorganized docs subdirectory.

  * New locales
    -----------
    * Bengali
      Provided by Chandrakant Dhutadmal
