@@ -12,7 +12,7 @@ alt="Tux&nbsp;Paint"><br>
 
 version
 
-0.9.23c
+0.9.24
 
 </h1>
 <h3>A simple drawing program for children</h3>
@@ -22,7 +22,7 @@ version
 
 <p>June 14, 2002 -
 
-				October 7, 2018</p>
+				December 18, 2018</p>
 
 </center>
 
