@@ -8,7 +8,7 @@ http://www.tuxpaint.org/
 
 $Id$
 
-2018.Oct.7 (0.9.23c)
+2018.Dec.18 (0.9.24)
   * Bug Fixes
     ---------
     * Correct issue that prevented Tux Paint from lauching on Mac OS X 10.7.
@@ -30,6 +30,8 @@ $Id$
     ---------------------
     * Mended link to MinGW/MSYS instructions at John Popplewell's website.
       (h/t "sechidis")
+
+    * Improved and expanded usage info (e.g., "tuxpaint --help" output)
 
   * Misc
     ----
